deployment/components/infra/log/ingress/controller.yaml
kind: Service
apiVersion: v1
metadata:
  name: log-ingress
  labels:
    app.kubernetes.io/name: log-ingress
    app.kubernetes.io/part-of: log-ingress
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: log-ingress
    app.kubernetes.io/part-of: log-ingress
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: log-ingress-controller
  labels:
    app.kubernetes.io/name: log-ingress
    app.kubernetes.io/part-of: log-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: log-ingress
      app.kubernetes.io/part-of: log-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: log-ingress
        app.kubernetes.io/part-of: log-ingress
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: log-ingress-controller
          image: quay.io/kubernetes-ingress-controller/log-ingress-controller:0.20.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/log-ingress-configuration
            - --tcp-services-configmap=$(POD_NAMESPACE)/log-ingress-tcp-services
            - --udp-services-configmap=$(POD_NAMESPACE)/log-ingress-udp-services
            - --publish-service=$(POD_NAMESPACE)/log-ingress
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --ingress-class=nginx-log-ingress
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            # www-data -> 33
            runAsUser: 33
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
