deployment/components/infra/log/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: log-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: false
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/app-root: /
    kubernetes.io/ingress.class: nginx-log-ingress
spec:
  tls:
  - secretName: das-ssl
  rules:
  - http:
      paths:
      - path: /elasticsearch
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 5601
      - path: /logstash
        backend:
          serviceName: logstash
          servicePort: 5044
